# wow-addon-updater

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CODEOWNERS  Pipfile  README.md  SiteHandler.py  WoWAddonUpdater.py  changelog.txt  config.ini  pyproject.toml  run_MacLinux.sh  run_Windows.bat  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml
site/: AbstractSite.py  Curse.py  SiteHandler.py  Tukui.py  WoWAce.py  WoWInterface.py
test/: testutils.py
test/manager/: test_addon_manager.py
test/resources/: mock-curse-version-addons-simc.html
test/site/: test_curse.py  test_github.py  test_github_release.py  test_site_handler.py  test_sitehandler.py  test_tukui.py  test_wowace.py  test_wowinterface.py
updater/: WoWAddonUpdater.py  __init__.py  __main__.py
updater/manager/: AddonManager.py  __init__.py  addon_manager.py  config.py
updater/site/: Curse.py  SiteHandler.py  Tukui.py  WoWAce.py  WoWInterface.py  __init__.py  abstract_site.py  curse.py  enum.py  github.py  github_release.py  site_handler.py  tukui.py  wowace.py  wowinterface.py
