[tool.poetry]
name = "wow-addon-updater"
version = "v1.5.3"
description = ""
authors = ["grrttedwards"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
beautifulsoup4 = "*"
cloudscraper = "*"

[tool.poetry.dev-dependencies]
coverage = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
